--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 #root {
-  max-width: 1480px;
+  /* max-width: 1480px; */
   width: 100%;
   margin: 0 auto;
   padding: 0px 20px;
@@ -57,6 +57,19 @@
   --font-collegeblock: "collegeblock", sans-serif;
   --font-roboto: "roboto", sans-serif;
 
+
+
+    
+    --breakpoint-xs: 300px;
+    --breakpoint-sm: 640px;
+    --breakpoint-md: 768px;
+    --breakpoint-md1: 993px;
+    --breakpoint-lg: 1024px;
+    --breakpoint-xl: 1200px;
+    --breakpoint-2xl: 1536px;
+   
+
+
   --animate-marquee: marquee 15s linear infinite;
 
   @keyframes marquee {
@@ -68,11 +81,7 @@
     }
   }
 
-  /* 'sm': '640px',
-      'md': '768px',
-      'lg': '1024px',
-      'xl': '1280px',
-      '2xl': '1536px', */
+
 }
 
 body {
