--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 #root {
-  max-width: 1480px;
+  /* max-width: 1480px; */
   width: 100%;
   margin: 0 auto;
   padding: 0px 20px;
@@ -109,10 +109,11 @@ body {
   min-height: 100vh;
 }
 
+/* Y axis */
 .hideScrollBar {
   overflow-y: scroll;
+  
 }
-
 /* Hide scrollbar (Chrome, Safari, Edge) */
 .hideScrollBar::-webkit-scrollbar {
   display: none;
@@ -124,6 +125,10 @@ body {
   -ms-overflow-style: none;
 }
 
+
+ 
+
+
 /* ////////////////////////// */
 
 .bets-scroll::-webkit-scrollbar-thumb {
@@ -133,7 +138,8 @@ body {
 }
 
 .bets-scroll::-webkit-scrollbar {
-  width: 9px;
+  width: 9px;      /* Y-axis */
+  height: 9px;     /* X-axis — ADDED */
 }
 
 .bets-scroll::-webkit-scrollbar-track {
@@ -144,50 +150,4 @@ body {
   background: #18303b; /* bright neon yellow-green */
   border-radius: 999px;
   /* box-shadow: 0 0 6px rgba(217, 255, 0, 0.7); */
-}
-
-.flame {
-  width: 180px;
-  height: 59px;
-  position: absolute;
-  left: -60px;
-  top: 6px;
-  z-index: -1;
-animation: flame-glow 900ms ease-out infinite;
-}
-
-@keyframes flame-glow {
-  0% {
-    transform: scale(0.92) translateY(1px);
-    filter: brightness(1);
-  }
-  20% {
-    transform: scale(1.05) translateY(0px);
-    filter: brightness(1.25);
-  }
-  40% {
-    transform: scale(0.92) translateY(0px);
-    filter: brightness(1);
-  }
-  60% {
-    transform: scale(1.05) translateY(0px);
-    filter: brightness(1.25);
-  }
-
-   0% {
-    transform: scale(0.92) translateY(1px);
-    filter: brightness(1);
-  }
-  20% {
-    transform: scale(1.05) translateY(0px);
-    filter: brightness(1.25);
-  }
-   80% {
-    transform: scale(0.92) translateY(1px);
-    filter: brightness(1);
-  }
-  100% {
-    transform: scale(1.05) translateY(0px);
-    filter: brightness(1.25);
-  }
 }
