--- a/src/components/Games/Crash/CrashGame/components/crashGraph.css
+++ b/src/components/Games/Crash/CrashGame/components/crashGraph.css
@@ -104,3 +104,70 @@
     transform: scale(1.4);
   }
 }
+
+.flame {
+  width: 180px;
+  height: 59px;
+  position: absolute;
+  left: -60px;
+  top: 6px;
+  z-index: -1;
+animation: flame-glow 900ms ease-out infinite;
+}
+
+@keyframes flame-glow {
+  0% {
+    transform: scale(0.92) translateY(1px);
+    filter: brightness(1);
+  }
+  20% {
+    transform: scale(1.05) translateY(0px);
+    filter: brightness(1.25);
+  }
+  40% {
+    transform: scale(0.92) translateY(0px);
+    filter: brightness(1);
+  }
+  60% {
+    transform: scale(1.05) translateY(0px);
+    filter: brightness(1.25);
+  }
+
+   0% {
+    transform: scale(0.92) translateY(1px);
+    filter: brightness(1);
+  }
+  20% {
+    transform: scale(1.05) translateY(0px);
+    filter: brightness(1.25);
+  }
+   80% {
+    transform: scale(0.92) translateY(1px);
+    filter: brightness(1);
+  }
+  100% {
+    transform: scale(1.05) translateY(0px);
+    filter: brightness(1.25);
+  }
+}
+
+
+
+@media(max-width:640px){
+  .rocket-img::before {
+  right: -30px;
+  top: 40px;
+  bottom: 0;
+}
+
+
+.flame {
+  width: 180px;
+  height: 59px;
+  position: absolute;
+  left: -55px;
+  top: -2px;
+}
+
+
+}
